--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,139 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+#Home {
+  background-image: url("./assets/banner-bg.png");
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+#About {
+  background-image: url("./assets/color-sharp.png");
+  background-size: cover;
+  background-color: #141314;
+}
+#Work {
+  background-image: url("./assets/color-sharp.png");
+  background-size: cover;
+  background-color: #141314;
+}
+#Contact {
+  background-image: url("./assets/color-sharp.png");
+  background-size: cover;
+  background-color: #141314;
+}
+
+/* <main-style> ============================ */
+.menu__button {
+  border: none;
+  background: none;
+  padding: 0;
+  margin: 0;
+  cursor: pointer;
+  font-family: inherit;
+  min-width: 62px;
+  height: 36px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 8px 16px;
+  border: 1px solid #fff;
+  background-color: transparent;
+  position: relative;
+}
+
+.menu__button::before {
+  content: "";
+  width: 100%;
+  height: 0;
+  background-color: #fff;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  z-index: -1;
+  transition: all 0.4s;
+}
+
+.menu__button:hover::before {
+  height: 100%;
+  top: 0;
+}
+
+.menu__button span {
+  color: #fff;
+  line-height: 1;
+  transition: color 0.4s;
+}
+
+.menu__button:hover span {
+  color: #000;
+}
+
+/* navbar button ends */
+
+/* welcome to my portfolio button */
+.welcome {
+  background: transparent;
+  color: #fff;
+
+  text-transform: uppercase;
+
+  border: none;
+  padding: 20px 30px;
+  perspective: 30rem;
+  border-radius: 10px;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.308);
+}
+
+.welcome::before {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  border-radius: 10px;
+  background: linear-gradient(
+    320deg,
+    rgba(0, 140, 255, 0.678),
+    rgba(128, 0, 128, 0.308)
+  );
+  z-index: 1;
+  transition: background 3s;
+}
+
+.welcome:hover::before {
+  animation: rotate 1s;
+  transition: all 0.5s;
+}
+
+@keyframes rotate {
+  0% {
+    transform: rotateY(180deg);
+  }
+
+  100% {
+    transform: rotateY(360deg);
+  }
+}
+/* welcome to my portfolio button ends*/
+
+.typing-demo {
+  width: 17ch;
+  animation: typing 2s steps(23), blink 0.5s step-end infinite alternate;
+  white-space: nowrap;
+  overflow: hidden;
+  border-right: 3px solid;
+}
+
+@keyframes typing {
+  from {
+    width: 0;
+  }
+}
+
+@keyframes blink {
+  50% {
+    border-color: transparent;
+  }
 }
