--- a/src/index.css
+++ b/src/index.css
@@ -69,7 +69,7 @@ body {
 }
 
 .menu__button:hover span {
-  color: #000;
+  color: #0d0d0d;
 }
 
 /* navbar button ends */
@@ -267,4 +267,142 @@ body {
 .Btn:hover .svgIcon {
   opacity: 0;
   transition-duration: 0.3s;
+}
+/******************************************* contact *********************************/
+
+.profile-card {
+  width: 17em;
+  height: 22.5em;
+  background: rgb(16 16 16);
+  transition: 1s ease-in-out;
+
+  border-radius: 20px;
+
+  display: flex;
+  flex-direction: column;
+}
+
+.profile-card .info {
+  font-weight: 600;
+  color: white;
+  display: block;
+  text-align: center;
+  font-size: 1em;
+  margin: 1em;
+}
+
+.profile-card .img {
+  width: 7em;
+  height: 6em;
+  margin: auto;
+}
+
+
+.linkcard {
+  display: flex;
+  height: 70px;
+  width: 350px;
+}
+
+.linkcard svg {
+  position: absolute;
+  display: flex;
+  width: 50%;
+  height: 100%;
+  font-size: 24px;
+  font-weight: 700;
+  opacity: 1;
+  transition: opacity 0.25s;
+  z-index: 2;
+  padding: 0.25rem;
+  cursor: pointer;
+}
+
+.linkcard .social-link1,
+.linkcard .social-link2,
+.linkcard .social-link3,
+.linkcard .social-link4,
+.linkcard .social-link5 {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 25%;
+  color: whitesmoke;
+  font-size: 24px;
+  text-decoration: none;
+  transition: 0.25s;
+  border-radius: 50px;
+}
+
+.linkcard svg {
+  transform: scale(1);
+}
+
+.linkcard .social-link1:hover {
+  background: #f09433;
+  background: -moz-linear-gradient(
+    45deg,
+    #f09433 0%,
+    #e6683c 25%,
+    #dc2743 50%,
+    #cc2366 75%,
+    #bc1888 100%
+  );
+  background: -webkit-linear-gradient(
+    45deg,
+    #f09433 0%,
+    #e6683c 25%,
+    #dc2743 50%,
+    #cc2366 75%,
+    #bc1888 100%
+  );
+  background: linear-gradient(
+    45deg,
+    #f09433 0%,
+    #e6683c 25%,
+    #dc2743 50%,
+    #cc2366 75%,
+    #bc1888 100%
+  );
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f09433', endColorstr='#bc1888',GradientType=1 );
+  animation: bounce_613 0.4s linear;
+}
+
+.linkcard .social-link2:hover {
+  background-color: #242c34;
+  animation: bounce_613 0.4s linear;
+}
+
+.linkcard .social-link3:hover {
+  background-color: #5865f2;
+  animation: bounce_613 0.4s linear;
+}
+
+.linkcard .social-link4:hover {
+  background-color: #0a66c2;
+  animation: bounce_613 0.4s linear;
+}
+
+.linkcard .social-link5:hover {
+  background-color: #ff8000;
+  animation: bounce_613 0.4s linear;
+}
+
+@keyframes bounce_613 {
+  40% {
+    transform: scale(1.4);
+  }
+
+  60% {
+    transform: scale(0.8);
+  }
+
+  80% {
+    transform: scale(1.2);
+  }
+
+  100% {
+    transform: scale(1);
+  }
 }
